# Prusa-Firmware-Buddy

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  ProjectOptions.cmake  README.md  RELEASE_NOTES_v6.5.3-RME.md  RELEASE_NOTES_v6.5.7-RME.md  RELEASE_NOTES_v6.6.0-RME.md  RELEASE_NOTES_v6.6.1-RME.md  RELEASE_NOTES_v6.6.2-RME.md  build.py  build_all.sh  color_converter.py  requirements.txt
src/common/feature/openprinttag/: CMakeLists.txt  data_utils.cpp  data_utils.hpp  defines.hpp  requests_base.cpp  requests_base.hpp  requests_read.hpp  requests_read_multi.hpp  tool_tag.cpp  tool_tag.hpp  usage_example.cpp
src/common/feature/openprinttag/detail/: CMakeLists.txt  defines.hpp  requests_base.cpp  requests_base.hpp  requests_meta.hpp  requests_multi_base.cpp  requests_multi_base.hpp  requests_read_base.hpp
src/common/feature/openprinttag/filament_usage_tracker/: filament_usage_tracker.cpp  filament_usage_tracker.hpp
src/common/tool/: CMakeLists.txt  physical_tool.cpp  physical_tool.hpp  physical_tool_type.hpp
src/common/tool/hotend/: hotend.hpp
src/common/tool/hotend/hotend/: base_hotend.cpp  base_hotend.hpp  dummy_hotend.hpp  dwarf_hotend.cpp  dwarf_hotend.hpp  indx_hotend.cpp  indx_hotend.hpp  local_hotend.cpp  local_hotend.hpp
src/common/tool/printer/: tools_indx.cpp  tools_xbuddy.cpp
src/common/tool/tool/: CMakeLists.txt  dummy_physical_tool.cpp  dummy_physical_tool.hpp  standard_fff_physical_tool.cpp  standard_fff_physical_tool.hpp
src/feature/: CMakeLists.txt  extrusion_calibration.cpp  extrusion_calibration.hpp
src/feature/auto_retract/: auto_retract.hpp
src/feature/chamber/: chamber.cpp  chamber.hpp
src/feature/chamber_filtration/: chamber_filtration.cpp  chamber_filtration.hpp
src/feature/cork/: tracker.cpp
src/feature/door_sensor_calibration/: screen_door_sensor_calibration.cpp
src/feature/emergency_stop/: emergency_stop.cpp
src/feature/factory_reset/: factory_reset.cpp
src/feature/filament_sensor/: filament_sensor.hpp  filament_sensor_adc.cpp  filament_sensor_invertible.cpp  filament_sensor_xbuddy_extension.cpp  filament_sensor_xbuddy_extension.hpp  filament_sensors_handler.cpp  filament_sensors_handler.hpp  filament_sensors_handler_XL.cpp  filament_sensors_handler_default.cpp  filament_sensors_handler_remap.cpp
src/feature/filament_sensor/calibrator/: filament_sensor_calibrator.hpp
src/feature/gcode_exception/: gcode_exception.cpp
src/feature/gearbox_alignment/: gcode_gearbox_alignment.cpp
src/feature/indx_dock_calibration/: dialog_dock_select.cpp  dialog_dock_select.hpp  dock_calibration_data.hpp  indx_dock_calibration.cpp  screen_dock_calibration.cpp
src/feature/indx_hotend_temp_model/: hotend_temp_model.cpp  hotend_temp_model.hpp  indx_filament_params.cpp  indx_filament_params.hpp  indx_hotend_temp_compensation.cpp  indx_hotend_temp_compensation.hpp  indx_hotend_thermal_model.cpp  indx_hotend_thermal_model.hpp
src/feature/indx_nozzle_cleaner_calibration/: indx_nozzle_cleaner_calibration.cpp  screen_nozzle_cleaner_calibration.cpp
src/feature/indx_tool_lock_hack/: CMakeLists.txt  indx_tool_lock_hack.cpp  indx_tool_lock_hack.hpp
src/feature/indx_tool_offsets_calibration/: CMakeLists.txt  indx_tool_offsets_calibration.cpp  indx_tool_offsets_calibration.hpp  screen_indx_tool_offsets_calibration.cpp  screen_indx_tool_offsets_calibration.hpp
src/feature/nozzle_cleaner/: nozzle_cleaner.cpp
src/feature/nozzle_cleaner/include/: nozzle_cleaner.hpp
src/feature/nozzle_cleaning_failed/: nozzle_cleaning_failed_wizard.cpp
src/feature/openprinttag/: request_manager.cpp  requests_read.cpp  requests_read_multi.hpp
src/feature/openprinttag/filament_usage_tracker/: CMakeLists.txt  filament_usage_tracker.cpp
src/feature/print_status_message/: print_status_message_formatter_buddy.cpp  print_status_message_formatter_buddy.hpp  print_status_message_guard.cpp  print_status_message_mgr.cpp  print_status_message_mgr.hpp
src/feature/psu_fan/: psu_fan.cpp
src/feature/ramming/: ramming_sequence.cpp  ramming_sequence.hpp  standard_ramming_sequence_nextruder.cpp
src/feature/remote_bed/: remote_bed.cpp
src/feature/safety_timer/: safety_timer.cpp  safety_timer.hpp
src/feature/tool_offset_calibration/: tool_offset_calibration.cpp  tool_offset_calibration.hpp
src/feature/wastebin_watcher/: wastebin_watcher.cpp  wastebin_watcher.hpp
src/feature/xbuddy_extension/: xbuddy_extension.cpp
src/module/contactless_offset/: CMakeLists.txt
src/module/nfc/prusa_nfc_stub/: CMakeLists.txt
src/module/nfc/prusa_nfc_stub/prusa_nfc_stub/: ll_nfc_reader.cpp  ll_nfc_reader.hpp
tests/unit/common/Leds/: CMakeLists.txt  color_matcher.hpp  frame_animation_tests.cpp  led_animation_tests.cpp
tests/unit/common/extrusion_calibration/: CMakeLists.txt  tests.cpp
tests/unit/common/feature/tool_index/: CMakeLists.txt  tool_index_iterator_tests.cpp
tests/unit/common/feature/tool_index/stub_include/option/: has_mmu2.h
tests/unit/common/st25dv64k/: CMakeLists.txt  st25dv64k_test.cpp
tests/unit/common/st25dv64k/include/device/: peripherals.hpp
tests/unit/feature/openprinttag/: CMakeLists.txt  buddy_openprinttag_datautils_tests.cpp  buddy_openprinttag_multirequest_tests.cpp  filament_usage_tracker_tests.cpp
tests/unit/feature/openprinttag/stub_include/data_utils/option/: has_filament_base_preset_param.h
tests/unit/feature/openprinttag/stub_include/filament_usage_tracker/option/: has_indx_head.h
tests/unit/feature/openprinttag/stub_include/tool_tag/: string_view_utf8.hpp
tests/unit/feature/openprinttag/stub_include_datautils/feature/openprinttag/: requests_read.hpp  tool_tag.hpp
tests/unit/feature/openprinttag/stub_include_multirequest/: tool_index.hpp
tests/unit/lib/Marlin/signal2step/: CMakeLists.txt  signal2step_tests.cpp
tests/unit/marlin/: CMakeLists.txt  marlin_temptable_tests.cpp
tests/unit/marlin/stub_include_pos_conv/module/: planner.h
tests/unit/marlin/stub_include_temptable/module/: temperature.h
tests/unit/marlin/stub_include_temptable/module/thermistor/: thermistors.h
(+1583 files in other folders)
